--- a/rock/db/sqlalchemy/alembic.ini
+++ b/rock/db/sqlalchemy/alembic.ini
@@ -29,7 +29,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = mysql://root:1234qwer@localhost/testdb
+sqlalchemy.url = mysql://root:1234qwer@localhost/testdb
 
 
 # Logging configuration
