Make ping extension now recongize the result of db

--- a/rock/db/sqlalchemy/alembic.ini
+++ b/rock/db/sqlalchemy/alembic.ini
@@ -30,6 +30,7 @@ script_location = alembic
 # output_encoding = utf-8
 
 sqlalchemy.url = mysql://root:1234qwer@localhost/testdb
+sqlalchemy.url = sqlite:///../../somedb.db
 
 
 # Logging configuration
