--- a/rock/rock.ini
+++ b/rock/rock.ini
@@ -1,2 +1,4 @@
+[database]
+connection = sqlite:///./somedb.db
 [host_mgmt_ping]
-target_addresses=172.16.0.1,127.0.0.1
+target_addresses=172.16.0.1,127.0.0.1,2.2.2.2
