Add database usage and modify rock.ini.

--- a/rock/rock.ini
+++ b/rock/rock.ini
@@ -1,2 +1,15 @@
 [host_mgmt_ping]
-target_addresses=172.16.0.1,127.0.0.1
+target_addresses=192.168.100.1,127.0.0.1
+
+[database]
+connection=mysql://user:pass@host/dbname
+
+[openstack_credential]
+username=admin
+user_domain_name=default
+password=None
+auth_url=http://localhost:35357/v3
+project_name=admin
+project_domain_id=default
+nova_client_version=2.0
+
