Fixed most bugs

--- a/rock/db/sqlalchemy/alembic.ini
+++ b/rock/db/sqlalchemy/alembic.ini
@@ -29,8 +29,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://root:1234qwer@localhost/testdb
-sqlalchemy.url = sqlite:///../../somedb.db
+sqlalchemy.url = mysql://rock:1234qwer@10.0.103.51/rock
 
 
 # Logging configuration
