--- a/setup.cfg
+++ b/setup.cfg
@@ -18,10 +18,27 @@ classifier =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.3
     Programming Language :: Python :: 3.4
+install_requires = 
+    pbr>=1.6
+    six
+    oslo.log
+    oslo.config
+    oslo.utils
+    oslo.service
+    oslo.log
+    oslo.db
+    taskflow
 
 [files]
 packages =
     rock
+data_files = 
+    /etc/rock = etc/rock.ini
+
+[entry_points]
+console_scripts = 
+    rock-mon = rock.monitor:main
+    rock-engine = rock.rock_engine:main
 
 [build_sphinx]
 source-dir = doc/source
@@ -49,3 +66,4 @@ output_file = rock/locale/rock.pot
 all_files = 1
 build-dir = releasenotes/build
 source-dir = releasenotes/source
+
