--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,9 @@ packages =
     rock
 data_files = 
     /etc/rock = etc/rock.ini
+    /etc/keepalied = service/keepalived/keepalived.conf
+    /usr/lib/systemd/system = service/systemd/*
+    /usr/local/bin = service/script/*
 
 [entry_points]
 console_scripts = 
