--- a/setup.cfg
+++ b/setup.cfg
@@ -18,20 +18,12 @@ classifier =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.3
     Programming Language :: Python :: 3.4
-install_requires = 
-    pbr>=1.6
-    six
-    oslo.log
-    oslo.config
-    oslo.utils
-    oslo.service
-    oslo.log
-    oslo.db
-    taskflow
 
 [files]
 packages =
     rock
+extra_files =  
+    requirements.txt
 data_files = 
     /etc/rock = etc/rock.ini
     /etc/keepalied = service/keepalived/keepalived.conf
