--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ extra_files =
     requirements.txt
 data_files = 
     /etc/rock = etc/rock.ini
-    /etc/keepalied = service/keepalived/keepalived.conf
+    /etc/keepalived = service/keepalived/keepalived.conf
     /usr/lib/systemd/system = service/systemd/*
     /usr/local/bin = service/script/*
 
