Commit by hebin #3

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,8 @@ packages =
 extra_files =  
     requirements.txt
 data_files = 
-    /etc/rock = etc/rock.ini
+    /etc/rock = etc/*
+    /usr/bin = commands/rock-db-manage
     /etc/keepalived = service/keepalived/keepalived.conf
     /usr/lib/systemd/system = service/systemd/*
     /usr/local/bin = service/script/*
