--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -1,3 +1,12 @@
+[DEFAULT]
+# debug=false
+# verbose=true
+# log_dir=/var/log/rock
+# rock_mon_log_file=rock-mon.log
+# rock_engine_log_file=rock-engine.log
+# log_date_format=	%Y-%m-%d %H:%M:%S
+# watch_log_file=true
+
 [host_mgmt_ping]
 target_addresses=10.0.103.68,10.0.103.69
 ip_hostname_map=10.0.103.68:server-68,10.0.103.69:server-69
