--- a/etc/alembic.ini
+++ b/etc/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = alembic
+script_location = /usr/lib/python2.7/site-packages/rock/db/sqlalchemy/alembic
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
