Add message report task.

--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -23,3 +23,8 @@ project_name=openstack
 project_domain_id=default
 nova_client_version=2.0
 
+[activemq]
+server_ip=localhost
+server_port=61613
+# username=<UserName>
+# password=<PassWord>
