--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -13,6 +13,9 @@ ip_hostname_map=10.0.103.68:server-68,10.0.103.69:server-69
 
 [database]
 connection=mysql://rock:1234qwer@10.0.103.51/rock
+host=10.0.103.51
+user=rock
+passwd=1234qwer
 
 [openstack_credential]
 username=admin
