Configured destination of activemq

--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -29,5 +29,6 @@ nova_client_version=2.0
 [activemq]
 server_ip=localhost
 server_port=61613
+destination=eventQueue
 # username=<UserName>
 # password=<PassWord>
