Add db clear scripts to setup.cfg.
Add db clear scripts to setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ data_files =
     /etc/keepalived = service/keepalived/keepalived.conf
     /usr/lib/systemd/system = service/systemd/*
     /usr/local/bin = service/script/*
+    /usr/local/bin = service/db_clear/*
 
 [entry_points]
 console_scripts = 
