--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -26,9 +26,14 @@ project_name=openstack
 project_domain_id=default
 nova_client_version=2.0
 
+[host_evacuate]
+check_times=6
+check_interval=15
+
 [activemq]
 server_ip=localhost
 server_port=61613
 destination=eventQueue
+error_allowed=True
 # username=<UserName>
 # password=<PassWord>
