Modified ping plugin to ping more than one ip of a compute host.

--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -8,8 +8,10 @@
 # watch_log_file=true
 
 [host_mgmt_ping]
-target_addresses=10.0.103.68,10.0.103.69
-ip_hostname_map=10.0.103.68:server-68,10.0.103.69:server-69
+compute_hosts=server-68,server-69
+management_network_ip=10.0.103.68,10.0.103.69
+tunnel_network_ip=192.168.10.10,192.168.10.11
+storage_network_ip=10.0.108.119,10.0.108.120
 
 [database]
 connection=mysql://rock:1234qwer@10.0.103.51/rock
