Fixed some bugs when deploy with puppet.

--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -4,7 +4,8 @@
 # log_dir=/var/log/rock
 # rock_mon_log_file=rock-mon.log
 # rock_engine_log_file=rock-engine.log
-# log_date_format=	%Y-%m-%d %H:%M:%S
+# message_report_error_allowed=true
+# log_date_format=%Y-%m-%d %H:%M:%S
 # watch_log_file=true
 
 [host_mgmt_ping]
@@ -15,9 +16,6 @@ storage_network_ip=10.0.108.119,10.0.108.120
 
 [database]
 connection=mysql://rock:1234qwer@10.0.103.51/rock
-host=10.0.103.51
-user=rock
-passwd=1234qwer
 
 [openstack_credential]
 username=admin
@@ -36,6 +34,5 @@ check_interval=15
 server_ip=localhost
 server_port=61613
 destination=eventQueue
-error_allowed=True
 # username=<UserName>
 # password=<PassWord>
