--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -1,38 +1,44 @@
 [DEFAULT]
-# debug=false
-# verbose=true
-# log_dir=/var/log/rock
-# rock_mon_log_file=rock-mon.log
-# rock_engine_log_file=rock-engine.log
-# message_report_error_allowed=true
-# log_date_format=%Y-%m-%d %H:%M:%S
-# watch_log_file=true
+# debug = false
+# verbose = true
+# check_cases_interval = 300
+# message_report_to = activemq
+# message_report_error_allowed = true
+# log_dir = /var/log/rock
+# rock_mon_log_file = rock-mon.log
+# rock_engine_log_file = rock-engine.log
+# log_date_format = %Y-%m-%d %H:%M:%S
+# watch_log_file = true
 
 [host_mgmt_ping]
-compute_hosts=server-68,server-69
-management_network_ip=10.0.103.68,10.0.103.69
-tunnel_network_ip=192.168.10.10,192.168.10.11
-storage_network_ip=10.0.108.119,10.0.108.120
+compute_hosts = server-68,server-69
+management_network_ip = 10.0.103.68,10.0.103.69
+# tunnel_network_ip = 192.168.10.10,192.168.10.11
+# storage_network_ip = 10.0.108.119,10.0.108.120
 
 [database]
-connection=mysql://rock:1234qwer@10.0.103.51/rock
+connection = mysql://rock:1234qwer@10.0.103.51/rock
 
 [openstack_credential]
-username=admin
-user_domain_name=default
-password=1q2w3e4r
-auth_url=http://lb.103.hatest.ustack.in:35357/v3
-project_name=openstack
-project_domain_id=default
-nova_client_version=2.0
+username = admin
+user_domain_id = default
+password = 1q2w3e4r
+auth_url = http://lb.103.hatest.ustack.in:35357/v3
+project_name = openstack
+project_domain_id = default
+nova_client_version = 2.0
 
 [host_evacuate]
-check_times=6
-check_interval=15
+check_times = 6
+check_interval = 15
 
 [activemq]
-server_ip=localhost
-server_port=61613
-destination=eventQueue
-# username=<UserName>
-# password=<PassWord>
+server_ip = 10.0.103.32
+server_port = 61613
+destination = eventQueue
+# username = <UserName>
+# password = <PassWord>
+
+[kiki]
+mail_api_endpoint = http://127.0.0.1:8200/v1/publish/publish_email
+mail_address = hebin@unitedstack.com
