Fixed some bugs.

--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -1,14 +1,15 @@
 [DEFAULT]
-# debug = false
-# verbose = true
-# check_cases_interval = 300
-# message_report_to = activemq
-# message_report_error_allowed = true
-# log_dir = /var/log/rock
-# rock_mon_log_file = rock-mon.log
-# rock_engine_log_file = rock-engine.log
-# log_date_format = %Y-%m-%d %H:%M:%S
-# watch_log_file = true
+debug = false
+verbose = true
+check_cases_interval = 300
+message_report_to = activemq
+message_report_error_allowed = true
+log_dir = /var/log/rock
+rock_mon_log_file = rock-mon.log
+rock_engine_log_file = rock-engine.log
+log_date_format = %Y-%m-%d %H:%M:%S
+# More about log configuration, please refer to
+# http://docs.openstack.org/developer/oslo.log/opts.html
 
 [host_mgmt_ping]
 compute_hosts = server-68,server-69
@@ -18,6 +19,8 @@ management_network_ip = 10.0.103.68,10.0.103.69
 
 [database]
 connection = mysql://rock:1234qwer@10.0.103.51/rock
+# More about database configuration, please refer to
+# http://docs.openstack.org/developer/oslo.db/opts.html
 
 [openstack_credential]
 username = admin
