Add on_shared_storage parameter in rock.ini.

--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -32,6 +32,7 @@ project_domain_id = default
 nova_client_version = 2.0
 
 [host_evacuate]
+on_shared_storage = true
 check_times = 6
 check_interval = 15
 
