Add database rock_history init script.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ extra_files =
     requirements.txt
 data_files =
     /etc/rock = etc/*
-    /usr/bin = commands/rock-db-manage
+    /usr/bin = commands/*
     /usr/lib/systemd/system = service/systemd/*
     /usr/local/bin = service/script/*
     /usr/local/bin = service/db_clear/*
