Add resource agent for rock monitor and engine service.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ extra_files =
     requirements.txt
 data_files =
     /etc/rock = etc/*
+    /usr/lib/ocf/resource.d/ustack/ = resource_agent/*
     /usr/bin = commands/*
     /usr/lib/systemd/system = service/systemd/*
     /usr/local/bin = service/script/*
