Add comment to host_evacuate

--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -2,7 +2,7 @@
 debug = false
 verbose = true
 check_cases_interval = 300
-message_report_to = activemq
+message_report_to = kiki
 message_report_error_allowed = true
 log_dir = /var/log/rock
 rock_mon_log_file = rock-mon.log
@@ -33,7 +33,7 @@ nova_client_version = 2.0
 
 [host_evacuate]
 on_shared_storage = true
-check_times = 6
+check_times = 8
 check_interval = 15
 
 [activemq]
