--- a/etc/rock.ini
+++ b/etc/rock.ini
@@ -37,12 +37,15 @@ check_times = 8
 check_interval = 15
 
 [activemq]
-server_ip = 10.0.103.32
-server_port = 61613
-destination = eventQueue
+# server_ip = 10.0.103.32
+# server_port = 61613
+# destination = eventQueue
 # username = <UserName>
 # password = <PassWord>
 
 [kiki]
 mail_api_endpoint = http://10.0.100.37:8200/v1/publish/publish_email
 mail_address = hebin@unitedstack.com
+
+[ipmi]
+use_ipmi = True
